refactor codebase structure